--- a/index.html
+++ b/index.html
@@ -2,21 +2,38 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Les monuments</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 </head>
 
 <body>
-    <header>
-        <h1>Les monuments</h1>
-    </header>
-    <script type="text/javascript" src="script.js"></script>
+    <div class="container">
+        <header>
+            <h1>LES MONUMENTS</h1>
+            <h4>
+                Cliquez sur un monument ou son bouton pour obtenir une description
+            </h4>
+            <div class="navbar"></div>
+            <div class="img-container"></div>
+        </header>
+        <section class="monument-details">
+            <h2 id="monument-name"></h2>
+            <p id="monument-city"></p>
+            <p id="monument-state"></p>
+            <div class="description" id="monument-description"></div>
+        </section>
+        <button id="show-map-button">Afficher la carte</button>
+        <div id="map"></div>
+        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+        <script type="text/javascript" src="script.js"></script>
+    </div>
 </body>
 
 </html>
