--- a/index.html
+++ b/index.html
@@ -23,17 +23,21 @@
             <div class="navbar"></div>
             <div class="img-container"></div>
         </header>
+        <button id="show-map-button">Afficher la carte</button>
         <section class="monument-details">
             <h2 id="monument-name"></h2>
             <p id="monument-city"></p>
             <p id="monument-state"></p>
-            <div class="description" id="monument-description"></div>
+            <div class="description" id="monument-description"></div>            
         </section>
-        <button id="show-map-button">Afficher la carte</button>
-        <div id="map"></div>
-        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-        <script type="text/javascript" src="script.js"></script>
     </div>
+    <div class="map-container">
+        <div id="map"></div>
+    </div>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+</body>
+
 </body>
 
 </html>
